--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,9 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>3.0.2.RELEASE</version>
+			<version>5.3.15</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
